Fix flexbox flicker during slow html load

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -6,6 +6,7 @@ body {
 
 .leftspace {
     flex: 1;
+    order: 1;
     @media (max-width: 1200px) {
         max-width: 80px;
     }
@@ -13,6 +14,7 @@ body {
 
 .rightspace {
     flex: 2.5;
+    order: 3;
 }
 
 .menu {
@@ -48,6 +50,7 @@ body {
 }
 
 .mainframe {
+    order: 2;
     width: 467px; // this is fixed by default to avoid strange behaviour with flex
     line-height: 25px;
     margin: 90px 0 120px;
